Finish migration of import to Swing