@@ -1,7 +1,6 @@
 package de.dentareport.imports.dampsoft;
 
 import de.dentareport.Config;
-//import de.dentareport.gui.ProgressUpdate;
 import de.dentareport.gui.util.FileProgressListener;
 import de.dentareport.imports.dampsoft.dampsoft_files.DampsoftFile;
 import de.dentareport.utils.db.DbRow;
@@ -10,20 +9,18 @@ import de.dentareport.utils.dbf.DbfRow;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static de.dentareport.utils.db.DbConnection.db;
 
 // TODO: TEST?
 public class DampsoftImport {
 
-    private Dbf dbf;
-    private DampsoftFile dampsoftFile;
+    private final Dbf dbf;
+    private final DampsoftFile dampsoftFile;
     private int totalRows;
     private int processedRows;
 
-    public DampsoftImport(DampsoftFile dampsoftFile,
-                          Dbf dbf) {
+    public DampsoftImport(DampsoftFile dampsoftFile, Dbf dbf) {
         this.dbf = dbf;
         this.dampsoftFile = dampsoftFile;
     }
@@ -36,9 +33,8 @@ public class DampsoftImport {
         executeImport(true, listener);
     }
 
-    public void importFileWithoutRebuildingTable() {
-        // TODO Fix this
-//        executeImport(false);
+    public void importFileWithoutRebuildingTable(FileProgressListener listener) {
+        executeImport(false, listener);
     }
 
     public void rebuildTable() {
@@ -60,7 +56,6 @@ public class DampsoftImport {
         openDbf();
         totalRows = dbf.rowCount();
         processedRows = 0;
-//        ProgressUpdate.init(dbf.rowCount(), dampsoftFile.progressMessage());
         if (rebuildTable) {
             rebuildTable();
         }
@@ -75,26 +70,21 @@ public class DampsoftImport {
     private int importChunkOfRows(FileProgressListener listener) {
         List<DbfRow> dbfRows = dbf.chunkOfRows();
         processedRows += dbfRows.size();
-
-        int percent = totalRows == 0
-                ? 100
-                : processedRows * 100 / totalRows;
-
-        listener.onProgress(percent,
-                dampsoftFile.progressMessage());
+        int percent = totalRows == 0 ? 100 : processedRows * 100 / totalRows;
+        listener.onProgress(percent, dampsoftFile.progressMessage());
         writeValidRowsToDb(dbfRows);
+
         return dbfRows.size();
     }
 
     private void writeValidRowsToDb(List<DbfRow> dbfRows) {
         List<DbRow> validRows = new ArrayList<>();
         for (DbfRow dbfRow : dbfRows) {
-//            ProgressUpdate.tick();
             validRows.addAll(dampsoftFile.convert(dbfRow)
                     .stream()
-                    .filter(dbRow -> dampsoftFile.isValidRow(dbRow))
-                    .map(dbRow -> dampsoftFile.removeTemporaryColumns(dbRow))
-                    .collect(Collectors.toList())
+                    .filter(dampsoftFile::isValidRow)
+                    .map(dampsoftFile::removeTemporaryColumns)
+                    .toList()
             );
         }
         db().writeRows(dampsoftFile.tablename(), validRows);
